Added custom library

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,20 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header>
+  <ion-toolbar color="primary">
     <ion-title>
-      Blank
+      Mobiblaize Library
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <lib-custom-card title="My Coold Library Card" content="There will be dragons"></lib-custom-card>
+  <ion-button expand="full" (click)="getData()">Load Data</ion-button>
+  <ion-button expand="full" routerLink="/custom">Open Library Page</ion-button>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-card *ngIf="user">
+    <img [src]="user.picture.large">
+    <ion-card-content>
+      {{ user.email }}
+    </ion-card-content>
+  </ion-card>
 </ion-content>
